--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,5 +32,5 @@ steps:
   displayName: 'NuGet push'
   inputs:
     command: push
-    publishVstsFeed: '<feedName>'
+    publishVstsFeed: 'BreezePackages'
     allowPackageConflicts: true
