--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,13 @@ steps:
 - script: dotnet pack --configuration $(buildConfiguration) -p:PackageVersion=$(Major).$(Minor).$(Patch)
   displayName: 'dotnet pack $(buildConfiguration)'
   workingDirectory: '$(Build.SourcesDirectory)/sdk/src/DocuSign.eSign.Core/'
-- script: dotnet nuget push --source "BreezePackages" --api-key az '$(Build.ArtifactStagingDirectory)/**/*.nupkg'
-  displayName: 'dotnet nuget push'
+- task: NuGetAuthenticate@0
+  displayName: 'NuGet Authenticate'
+- task: NuGetCommand@2
+  displayName: 'NuGet push'
+  inputs:
+    command: push
+    nuGetFeedType: 'internal'
+    publishVstsFeed: 'BreezePackages'
+    allowPackageConflicts: true
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
