Added the nuget.config back.

--- a/sdk/src/DocuSign.eSign.Core/nuget.config
+++ b/sdk/src/DocuSign.eSign.Core/nuget.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
+        <clear />
+        <add key="BreezePackages" value="https://leveragerx.pkgs.visualstudio.com/LeverageRx/_packaging/BreezePackages/nuget/v3/index.json" />
     </packageSources>
 </configuration>
